--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,5 +5,5 @@
 <% @products.each do |product| %>
 	<%= link_to product[:name], "/products/#{product.id}"  %><br>
 	<%= product[:description] %><br>
-	<%= "$" + '%.2f' % (product[:price_in_cents]/100.0) %><br><br>
+	<%= "$" + product.formatted_price %><br><br>
 <% end %>
